Update scholastic achievements

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,7 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Machine learning wizard
+  uni: Microsoft University
+  year: June, 2017 &mdash; January, 2018
   # awards:
   # summary:
+    Focussed on AI applications
